# GRISMCONF

./: .gitignore  pyproject.toml
docs/: intro.md
grismconf/: __init__.py  grismconf.py  grismconf2.py  jax.py  poly.py  specwcs.py
grismconf/grizli/: __init__.py  instrument_transform.py
tests/: niriss.py  test_example1.py  test_grismconf2_example1.py  test_grismconf2_niriss.py  test_instrument_transform.py  test_jax_example.py  test_poly.py  test_poly_jax.py
